--- a/src/front-end/admin-get-page/styles/main/main.css
+++ b/src/front-end/admin-get-page/styles/main/main.css
@@ -52,6 +52,7 @@ main {
   justify-content: center;
   width: 100%;
   height: 100vh;
+  min-height: 700px;
   background-color: var(--light-gray);
   position: relative;
 }
@@ -75,15 +76,30 @@ main > div:first-of-type > div > h1 {
 }
 main > div:first-of-type > div > div:first-of-type {
   width: 100%;
-  padding-top: 28px;
+  padding-top: 21px;
 }
 main > div:first-of-type > div > div:first-of-type > form {
-  display: flex;
   width: 100%;
+}
+main > div:first-of-type > div > div:first-of-type > form > span {
+  display: none;
+  color: red;
+  font-size: 13.3px;
+  padding-bottom: 10.5px;
+}
+main > div:first-of-type > div > div:first-of-type > form > span.--on {
+  display: block;
+}
+main > div:first-of-type > div > div:first-of-type > form > span i {
+  font-style: normal;
+}
+main > div:first-of-type > div > div:first-of-type > form > div {
+  display: flex;
   flex-direction: column;
   gap: 18.9px;
 }
-main > div:first-of-type > div > div:first-of-type > form > button {
+main > div:first-of-type > div > div:first-of-type > form > div > button {
+  width: 100%;
   gap: 7px;
   padding: 9.1px;
   border: 2px solid var(--primary-color);
@@ -94,7 +110,7 @@ main > div:first-of-type > div > div:first-of-type > form > button {
   color: white;
   transition: ease-in-out 0.35s;
 }
-main > div:first-of-type > div > div:first-of-type > form > button:hover {
+main > div:first-of-type > div > div:first-of-type > form > div > button:hover {
   background-color: white;
   color: var(--primary-color);
 }
