--- a/src/front-end/admin-get-page/styles/main/main.scss
+++ b/src/front-end/admin-get-page/styles/main/main.scss
@@ -1,7 +1,5 @@
 @import '../../../global/styles/modules/modules.scss';
 
-$default-font-size: 14px;
-
 main {
 	z-index: 1;
 	display: flex;
@@ -34,49 +32,9 @@ main {
 
 			& > div:first-of-type {
 				width: 100%;
-				padding-top: 21px;
 
 				& > form {
-					width: 100%;
-
-					& > span {
-						&.--on {
-							display: block;
-						}
-
-						display: none;
-						color: red;
-						font-size: 13.3px;
-						padding-bottom: 10.5px;
-
-						i {
-							font-style: normal;
-						}
-					}
-
-					& > div {
-						display: flex;
-						flex-direction: column;
-						gap: 18.9px;
-
-						& > button {
-							&:hover {
-								background-color: white;
-								color: var(--primary-color);
-							}
-
-							width: 100%;
-							gap: 7px;
-							padding: 9.1px;
-							border: 2px solid var(--primary-color);
-							font-size: 15.4px;
-							font-family: var(--font-bold);
-							background-color: var(--primary-color);
-							border-radius: 14px;
-							color: white;
-							transition: ease-in-out 0.35s;
-						}
-					}
+					@extend %default-form;
 				}
 			}
 		}
@@ -104,82 +62,5 @@ main {
 				fill: var(--primary-color);
 			}
 		}
-	}
-}
-
-div.custom-input {
-	position: relative;
-
-	label {
-		cursor: text;
-		color: var(--regular-gray);
-		transition: ease-in-out 0.28s;
-		font-size: $default-font-size;
-		transform: translateY(-50%);
-		position: absolute;
-		top: 50%;
-		left: 14px;
-	}
-
-	input {
-		&:not(:placeholder-shown) + label {
-			color: var(--regular-gray);
-			padding: 0px 7px;
-			font-size: 11.9px;
-			background-color: white;
-			transform: translateY(-170%);
-		}
-
-		&:focus + label {
-			color: var(--primary-color);
-			padding: 0px 7px;
-			font-size: 11.9px;
-			background-color: white;
-			transform: translateY(-170%);
-		}
-
-		&:focus {
-			outline: none;
-			border: 2px solid var(--primary-color);
-		}
-
-		&::placeholder {
-			filter: opacity(0%);
-		}
-
-		&::-webkit-input-placeholder {
-			/* WebKit browsers */
-			color: transparent;
-		}
-
-		&:-moz-placeholder {
-			/* Mozilla Firefox 4 to 18 */
-			color: transparent;
-		}
-
-		&::-moz-placeholder {
-			/* Mozilla Firefox 19+ */
-			color: transparent;
-		}
-
-		&:-ms-input-placeholder {
-			/* Internet Explorer 10+ */
-			color: transparent;
-		}
-
-		&:-webkit-autofill,
-		&:-webkit-autofill:hover,
-		&:-webkit-autofill:focus,
-		&:-webkit-autofill:active {
-			transition: background-color 5000s ease-in-out 0s;
-		}
-
-		width: 100%;
-		padding: 9.1px 14px;
-		border-radius: 11.9px;
-		font-size: $default-font-size;
-		border: 2px solid var(--regular-gray);
-		transition: ease-in-out 0.28s;
-		color: var(--dark-gray);
 	}
 }
