--- a/src/front-end/global/styles/modules/modules.scss
+++ b/src/front-end/global/styles/modules/modules.scss
@@ -11,12 +11,103 @@
 	height: 20.3px;
 }
 
+%small-font-size {
+	font-size: 14px;
+}
+
 %default-font-size {
 	font-size: 17.5px;
 }
 
 %big-font-size {
 	font-size: 28px;
+}
+
+%aside-menu {
+	&.--on {
+		pointer-events: all;
+		filter: opacity(100%);
+
+		& > div {
+			transform: translate(0%);
+		}
+	}
+
+	pointer-events: none;
+	filter: opacity(0%);
+	background-color: rgba(0, 0, 0, 0.5);
+	transition: ease-in-out 0.35s;
+	z-index: 4;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	position: fixed;
+	top: 0px;
+
+	& > button {
+		width: 100%;
+	}
+
+	& > div {
+		width: 315px;
+		min-width: 315px;
+		background-color: var(--light-gray);
+		transition: ease-in-out 0.35s;
+		transform: translate(100%);
+		position: relative;
+
+		& > div:first-of-type {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			padding: 42px 21px 35px 21px;
+			width: 100%;
+			background-color: var(--primary-color);
+
+			& > div {
+				& > img {
+					@extend %default-height-size;
+					filter: grayscale(100%) brightness(200%);
+				}
+
+				& > div {
+					&::before {
+						content: '';
+						width: 100%;
+						height: 1px;
+						background-color: white;
+						transform: translate(-50%, -50%);
+						position: absolute;
+						top: 50%;
+						left: 50%;
+					}
+
+					width: 100%;
+					margin-top: 35px;
+					position: relative;
+
+					p {
+						text-align: center;
+						font-size: 13.3px;
+						font-family: var(--font-bold);
+						padding: 14px;
+						background-color: var(--primary-color);
+						color: white;
+						transform: translate(-50%, -50%);
+						position: absolute;
+						top: 50%;
+						left: 50%;
+					}
+				}
+			}
+		}
+
+		& > div:last-of-type {
+			padding: 21px 21px 224px 21px;
+			overflow-y: scroll;
+			height: 100%;
+		}
+	}
 }
 
 %product-container {
@@ -148,10 +239,143 @@
 	}
 }
 
+%default-form {
+	width: 100%;
+	padding-top: 24.5px;
+
+	& > span {
+		&.--not-ok {
+			display: block;
+			color: red;
+		}
+
+		&.--ok {
+			display: block;
+			color: green;
+		}
+
+		display: none;
+		font-size: 13.3px;
+		padding-bottom: 10.5px;
+
+		i {
+			font-style: normal;
+		}
+	}
+
+	& > div {
+		display: flex;
+		flex-direction: column;
+		gap: 18.9px;
+
+		& > button {
+			&:hover {
+				background-color: white;
+				color: var(--primary-color);
+			}
+
+			@extend %small-font-size;
+			width: 100%;
+			gap: 7px;
+			padding: 9.1px;
+			border: 2px solid var(--primary-color);
+			font-family: var(--font-bold);
+			background-color: var(--primary-color);
+			border-radius: 14px;
+			color: white;
+			transition: ease-in-out 0.35s;
+		}
+
+		& > div {
+			position: relative;
+
+			label {
+				@extend %small-font-size;
+				cursor: text;
+				color: var(--regular-gray);
+				transition: ease-in-out 0.28s;
+				transform: translateY(-50%);
+				position: absolute;
+				top: 50%;
+				left: 14px;
+			}
+
+			input {
+				&:not(:placeholder-shown) + label {
+					color: var(--regular-gray);
+					padding: 0px 7px;
+					font-size: 11.9px;
+					background-color: white;
+					transform: translateY(-170%);
+				}
+
+				&:focus + label {
+					color: var(--primary-color);
+					padding: 0px 7px;
+					font-size: 11.9px;
+					background-color: white;
+					transform: translateY(-170%);
+				}
+
+				&:focus {
+					outline: none;
+					border: 2px solid var(--primary-color);
+				}
+
+				&::placeholder {
+					filter: opacity(0%);
+				}
+
+				&::-webkit-input-placeholder {
+					/* WebKit browsers */
+					color: transparent;
+				}
+
+				&:-moz-placeholder {
+					/* Mozilla Firefox 4 to 18 */
+					color: transparent;
+				}
+
+				&::-moz-placeholder {
+					/* Mozilla Firefox 19+ */
+					color: transparent;
+				}
+
+				&:-ms-input-placeholder {
+					/* Internet Explorer 10+ */
+					color: transparent;
+				}
+
+				&:-webkit-autofill,
+				&:-webkit-autofill:hover,
+				&:-webkit-autofill:focus,
+				&:-webkit-autofill:active {
+					transition: background-color 5000s ease-in-out 0s;
+				}
+
+				@extend %small-font-size;
+				width: 100%;
+				padding: 9.1px 14px;
+				border-radius: 11.9px;
+				border: 2px solid var(--regular-gray);
+				transition: ease-in-out 0.28s;
+				color: var(--dark-gray);
+			}
+		}
+	}
+}
+
 @media (min-width: 375px) {
 	%default-padding-size {
 		padding-right: 28px;
 		padding-left: 28px;
+	}
+
+	%aside-menu {
+		& > div {
+			width: 336px;
+			min-width: 336px;
+		}
 	}
 }
 
@@ -221,8 +445,23 @@
 		height: 21px;
 	}
 
+	%small-font-size {
+		font-size: 15.4px;
+	}
+
 	%default-font-size {
 		font-size: 21px;
+	}
+
+	%big-font-size {
+		font-size: 38.5px;
+	}
+
+	%aside-menu {
+		& > div {
+			width: 364px;
+			min-width: 364px;
+		}
 	}
 }
 
