--- a/src/front-end/root-get-page/styles/aside/aside.css
+++ b/src/front-end/root-get-page/styles/aside/aside.css
@@ -2,6 +2,80 @@ aside > div > div:first-of-type > div > img {
   height: 17.5px;
 }
 
+aside {
+  pointer-events: none;
+  filter: opacity(0%);
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: ease-in-out 0.35s;
+  z-index: 4;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  position: fixed;
+  top: 0px;
+}
+aside.--on {
+  pointer-events: all;
+  filter: opacity(100%);
+}
+aside.--on > div {
+  transform: translate(0%);
+}
+aside > button {
+  width: 100%;
+}
+aside > div {
+  width: 315px;
+  min-width: 315px;
+  background-color: var(--light-gray);
+  transition: ease-in-out 0.35s;
+  transform: translate(100%);
+  position: relative;
+}
+aside > div > div:first-of-type {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 42px 21px 35px 21px;
+  width: 100%;
+  background-color: var(--primary-color);
+}
+aside > div > div:first-of-type > div > img {
+  filter: grayscale(100%) brightness(200%);
+}
+aside > div > div:first-of-type > div > div {
+  width: 100%;
+  margin-top: 35px;
+  position: relative;
+}
+aside > div > div:first-of-type > div > div::before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: white;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+aside > div > div:first-of-type > div > div p {
+  text-align: center;
+  font-size: 13.3px;
+  font-family: var(--font-bold);
+  padding: 14px;
+  background-color: var(--primary-color);
+  color: white;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+aside > div > div:last-of-type {
+  padding: 21px 21px 224px 21px;
+  overflow-y: scroll;
+  height: 100%;
+}
+
 div.saved-product-container > div > div {
   z-index: 2;
   display: flex;
@@ -114,6 +188,12 @@ div.saved-product-container > div > div a i {
   font-size: 21px;
 }
 
+@media (min-width: 375px) {
+  aside > div {
+    width: 336px;
+    min-width: 336px;
+  }
+}
 @media (min-width: 700px) {
   aside > div > div:first-of-type > div > img {
     height: 18.9px;
@@ -128,81 +208,11 @@ div.saved-product-container > div > div a i {
   aside > div > div:first-of-type > div > img {
     height: 21px;
   }
+  aside > div {
+    width: 364px;
+    min-width: 364px;
+  }
 }
-aside {
-  pointer-events: none;
-  filter: opacity(0%);
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: ease-in-out 0.35s;
-  z-index: 4;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  position: fixed;
-  top: 0px;
-}
-aside.--on {
-  pointer-events: all;
-  filter: opacity(100%);
-}
-aside.--on > div {
-  transform: translate(0%);
-}
-aside > button {
-  width: 100%;
-}
-aside > div {
-  width: 315px;
-  min-width: 315px;
-  background-color: var(--light-gray);
-  transition: ease-in-out 0.35s;
-  transform: translate(100%);
-  position: relative;
-}
-aside > div > div:first-of-type {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 42px 21px 35px 21px;
-  width: 100%;
-  background-color: var(--primary-color);
-}
-aside > div > div:first-of-type > div > img {
-  filter: grayscale(100%) brightness(200%);
-}
-aside > div > div:first-of-type > div > div {
-  width: 100%;
-  margin-top: 35px;
-  position: relative;
-}
-aside > div > div:first-of-type > div > div::before {
-  content: "";
-  width: 100%;
-  height: 1px;
-  background-color: white;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-}
-aside > div > div:first-of-type > div > div p {
-  text-align: center;
-  font-size: 13.3px;
-  font-family: var(--font-bold);
-  padding: 14px;
-  background-color: var(--primary-color);
-  color: white;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-}
-aside > div > div:last-of-type {
-  padding: 21px 21px 224px 21px;
-  overflow-y: scroll;
-  height: 100%;
-}
-
 div.saved-product-container > div {
   transition: ease-in-out 0.35s;
   overflow: hidden;
@@ -245,10 +255,6 @@ ul.categories-list li button i:last-of-type:hover {
 }
 
 @media (min-width: 1700px) {
-  aside > div {
-    width: 364px;
-    min-width: 364px;
-  }
   ul.categories-list li button i:last-of-type {
     font-size: 15.4px;
   }
