--- a/src/front-end/root-get-page/styles/footer/footer.css
+++ b/src/front-end/root-get-page/styles/footer/footer.css
@@ -45,6 +45,9 @@ footer > div:first-of-type > div:last-of-type > div h1 {
     padding-right: 19.6vw;
     padding-left: 19.6vw;
   }
+  footer > div:first-of-type > div:last-of-type > div h1 {
+    font-size: 38.5px;
+  }
 }
 @media (min-width: 2880px) {
   footer > div:first-of-type {
