--- a/src/front-end/global/styles/modules/modules.scss
+++ b/src/front-end/global/styles/modules/modules.scss
@@ -295,6 +295,7 @@
 				color: var(--regular-gray);
 				transition: ease-in-out 0.28s;
 				transform: translateY(-50%);
+				pointer-events: none;
 				position: absolute;
 				top: 50%;
 				left: 14px;
@@ -357,7 +358,7 @@
 				width: 100%;
 				padding: 9.1px 14px;
 				border-radius: 11.9px;
-				border: 2px solid var(--regular-gray);
+				border: 2px solid rgb(100, 100, 100);
 				transition: ease-in-out 0.28s;
 				color: var(--dark-gray);
 			}
