--- a/root/views/root-get-page/styles/main/main.scss
+++ b/root/views/root-get-page/styles/main/main.scss
@@ -1,52 +1,8 @@
 @import '../modules/modules.scss';
 
 main {
-	padding: 140px 0;
+	padding: 133px 0;
 	background-color: var(--light-gray);
-}
-
-div.loading-screen-container {
-	&.--off {
-		filter: opacity(0%);
-		pointer-events: none;
-	}
-
-	z-index: 4;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100vh;
-	background-color: var(--primary-color);
-	transition: ease-in-out 1s;
-	position: fixed;
-	top: 0;
-	left: 0;
-
-	& > div {
-		&.--on {
-			filter: opacity(100%);
-		}
-
-		display: flex;
-		flex-direction: column;
-		align-items: left;
-		gap: 14px;
-		filter: opacity(0%);
-		transition: ease-in-out 1.5s;
-
-		& > img {
-			@extend %big-height-size;
-		}
-
-		& > div {
-			width: 0%;
-			transition: ease-in-out 1.4s;
-			height: 2.8px;
-			background-color: white;
-			border-radius: 70px;
-		}
-	}
 }
 
 div.propagandas-container {
@@ -173,7 +129,7 @@ div.product-section-container {
 
 			&.--special {
 				display: grid;
-				grid-template-columns: auto auto;
+				grid-template-columns: 1fr 1fr;
 				gap: 14px;
 
 				& > div {
@@ -198,14 +154,6 @@ div.product-section-container {
 				min-width: 280px;
 				width: 100%;
 			}
-		}
-	}
-}
-
-@media (hover: none) {
-	div.loading-screen-container {
-		& > div {
-			transform: translateY(-150%);
 		}
 	}
 }
