--- a/root/views/root-get-page/styles/footer/footer.scss
+++ b/root/views/root-get-page/styles/footer/footer.scss
@@ -70,12 +70,12 @@ footer {
 						justify-content: center;
 						width: 100%;
 						padding: 16.8px 0px;
-						font-size: 15.4px;
+						font-size: 14px;
 						font-family: var(--font-bold);
 						border-radius: 70px;
 
 						i {
-							font-size: 18.9px;
+							font-size: 17.5px;
 						}
 					}
 
@@ -88,6 +88,26 @@ footer {
 				& > p:last-of-type {
 					font-size: 13.3px;
 					padding: 98px 0px 0px 0px;
+				}
+			}
+		}
+	}
+}
+
+@media (min-width: 375px) {
+	footer {
+		& > div:first-of-type {
+			& > div:last-of-type {
+				& > div {
+					& > div {
+						a {
+							font-size: 15.4px;
+
+							i {
+								font-size: 18.9px;
+							}
+						}
+					}
 				}
 			}
 		}
