--- a/global/views/404-get-page/index.ejs
+++ b/global/views/404-get-page/index.ejs
@@ -43,7 +43,6 @@
 	<body>
 		<!--header-->
 		<header>
-			<!--logo-->
 			<div>
 				<a href="/">
 					<img
@@ -54,5 +53,23 @@
 				</a>
 			</div>
 		</header>
+
+		<!--main-->
+		<main>
+			<div>
+				<h1>
+					<i class="fa-solid fa-bug"></i>
+					404
+				</h1>
+				<h2>Page not found</h2>
+				<p>
+					We sincerely apologize for the inconvenience caused. 
+					It seems that the page you are looking for cannot 
+					be found. Please go back to the homepage or contact 
+					us.
+				</p>
+				<a href="/">Homepage</a>
+			</div>
+		</main>
 	</body>
 </html>
