--- a/endPoints/adminEndPoint/views/admin-get-page/index.ejs
+++ b/endPoints/adminEndPoint/views/admin-get-page/index.ejs
@@ -39,6 +39,9 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
+
+		<!--scripts-->
+		<script defer type="module" src="admin/admin-get-page/scripts/index.js"></script>
 	</head>
 	<body>
 		<!--header-->
