--- a/endPoints/adminEndPoint/views/admin-get-page/index.ejs
+++ b/endPoints/adminEndPoint/views/admin-get-page/index.ejs
@@ -44,6 +44,7 @@
 		<script defer type="module" src="/admin/public/admin-get-page/scripts/index.js"></script>
 	</head>
 	<body>
+
 		<!--header-->
 		<header>
 			<div>
@@ -56,6 +57,8 @@
 				</a>
 			</div>
 		</header>
+
+		<!--main-->
 		<main>
 			<div>
 				<div>
