--- a/endPoints/rootEndPoint/views/root-get-page/styles/header/header.css
+++ b/endPoints/rootEndPoint/views/root-get-page/styles/header/header.css
@@ -161,6 +161,7 @@ div.search-container > div > div > button:not(:last-of-type)::after {
 div.search-container > div > div > button > img {
   width: 73.5px;
   height: 73.5px;
+  border-radius: 7px;
   object-fit: contain;
 }
 div.search-container > div > div > button > div {
