--- a/endPoints/rootEndPoint/views/root-get-page/styles/header/header.scss
+++ b/endPoints/rootEndPoint/views/root-get-page/styles/header/header.scss
@@ -133,6 +133,7 @@ div.search-container {
 				& > img {
 					width: 73.5px;
 					height: 73.5px;
+					border-radius: 7px;
 					object-fit: contain;
 				}
 
