--- a/endPoints/rootEndPoint/views/root-get-page/styles/main/main.scss
+++ b/endPoints/rootEndPoint/views/root-get-page/styles/main/main.scss
@@ -129,7 +129,7 @@ div.product-section-container {
 
 			&.--special {
 				display: grid;
-				grid-template-columns: 1fr 1fr;
+				grid-template-columns: 1fr;
 				gap: 14px;
 
 				& > div {
