--- a/endPoints/rootEndPoint/views/root-get-page/styles/main/main.css
+++ b/endPoints/rootEndPoint/views/root-get-page/styles/main/main.css
@@ -274,7 +274,7 @@ div.product-section-container > div > div:last-of-type::-webkit-scrollbar {
 }
 div.product-section-container > div > div:last-of-type.--special {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 14px;
 }
 div.product-section-container > div > div:last-of-type.--special > div {
