--- a/endPoints/adminEndPoint/views/admin-get-page/styles/controller/controller.scss
+++ b/endPoints/adminEndPoint/views/admin-get-page/styles/controller/controller.scss
@@ -7,6 +7,18 @@
 	height: 17.5px;
 }
 
+%small-font-size {
+	font-size: 14px;
+}
+
+%default-font-size {
+	font-size: 17.5px;
+}
+
+%big-font-size {
+	font-size: 30.1px;
+}
+
 @media (min-width: 375px) {
 	%default-padding-size {
 		padding-right: 28px;
@@ -25,6 +37,14 @@
 	%default-height-size {
 		height: 18.9px;
 	}
+
+	%default-font-size {
+		font-size: 18.9px;
+	}
+
+	%big-font-size {
+		font-size: 33.6px;
+	}
 }
 
 @media (min-width: 1300px) {
@@ -42,6 +62,14 @@
 
 	%default-height-size {
 		height: 21px;
+	}
+
+	%small-font-size {
+		font-size: 15.4px;
+	}
+
+	%default-font-size {
+		font-size: 21px;
 	}
 }
 
