--- a/endPoints/rootEndPoint/views/root-get-page/styles/modules/modules.scss
+++ b/endPoints/rootEndPoint/views/root-get-page/styles/modules/modules.scss
@@ -1,24 +1,3 @@
-%default-padding-size {
-	padding-right: 21px;
-	padding-left: 21px;
-}
-
-%default-height-size {
-	height: 17.5px;
-}
-
-%small-font-size {
-	font-size: 14px;
-}
-
-%default-font-size {
-	font-size: 17.5px;
-}
-
-%big-font-size {
-	font-size: 30.1px;
-}
-
 %product-container {
 	z-index: 2;
 	display: flex;
@@ -146,59 +125,95 @@
 	}
 }
 
-@media (min-width: 375px) {
-	%default-padding-size {
-		padding-right: 28px;
-		padding-left: 28px;
-	}
-}
+%aside-menu {
+	&.--on {
+		pointer-events: all;
+		filter: opacity(100%);
 
-@media (min-width: 650px) {
-	%default-padding-size {
-		padding-right: 56px;
-		padding-left: 56px;
-	}
-}
-
-@media (min-width: 870px) {
-	%default-height-size {
-		height: 18.9px;
+		& > div {
+			transform: translate(0%);
+		}
 	}
 
-	%default-font-size {
-		font-size: 18.9px;
+	pointer-events: none;
+	filter: opacity(0%);
+	background-color: rgba(0, 0, 0, 0.5);
+	transition: ease-in-out 0.35s;
+	z-index: 4;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	position: fixed;
+	top: 0px;
+
+	& > button {
+		width: 100%;
 	}
 
-	%big-font-size {
-		font-size: 33.6px;
-	}
-}
+	& > div {
+		width: 308px;
+		min-width: 308px;
+		background-color: var(--light-gray);
+		transition: ease-in-out 0.35s;
+		transform: translate(100%);
+		position: relative;
 
-@media (min-width: 1300px) {
-	%default-padding-size {
-		padding-right: 15.4vw;
-		padding-left: 15.4vw;
+		& > div:first-of-type {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			padding: 42px 21px 35px 21px;
+			width: 100%;
+			background-color: var(--primary-color);
+
+			& > div {
+				& > img {
+					@extend %default-height-size !optional;
+					filter: grayscale(100%) brightness(200%);
+				}
+
+				& > div {
+					&::before {
+						content: '';
+						width: 100%;
+						height: 1px;
+						background-color: white;
+						transform: translate(-50%, -50%);
+						position: absolute;
+						top: 50%;
+						left: 50%;
+					}
+
+					width: 100%;
+					margin-top: 35px;
+					position: relative;
+
+					p {
+						text-align: center;
+						font-size: 13.3px;
+						font-family: var(--font-bold);
+						padding: 14px;
+						background-color: var(--primary-color);
+						color: white;
+						transform: translate(-50%, -50%);
+						white-space: nowrap;
+						position: absolute;
+						top: 50%;
+						left: 50%;
+					}
+				}
+			}
+		}
+
+		& > div:last-of-type {
+			padding: 21px 21px 224px 21px;
+			overflow-y: scroll;
+			height: 100%;
+		}
 	}
 }
 
 @media (min-width: 1700px) {
-	%default-padding-size {
-		padding-right: 21vw;
-		padding-left: 21vw;
-	}
-
-	%default-height-size {
-		height: 21px;
-	}
-
-	%small-font-size {
-		font-size: 15.4px;
-	}
-
-	%default-font-size {
-		font-size: 21px;
-	}
-
 	%product-container {
 		& > div:first-of-type {
 			img {
@@ -207,11 +222,11 @@
 			}
 		}
 	}
-}
 
-@media (min-width: 2880px) {
-	%default-padding-size {
-		padding-right: 30%;
-		padding-left: 30%;
+	%aside-menu {
+		& > div {
+			width: 322px;
+			min-width: 322px;
+		}
 	}
 }
