--- a/endPoints/adminEndPoint/views/admin-get-page/index.ejs
+++ b/endPoints/adminEndPoint/views/admin-get-page/index.ejs
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="robots" content="noindex">
 
 		<!--theme-color-->
 		<meta name="theme-color" content="<%= builder.header.color %>" />
