--- a/endPoints/adminEndPoint/views/admin-post-page/index.ejs
+++ b/endPoints/adminEndPoint/views/admin-post-page/index.ejs
@@ -28,8 +28,9 @@
 			}
 		</style>
 		<link rel="stylesheet" href="/admin-post-page/styles/index/index.css" />
-		<link rel="stylesheet" href="/admin-post-page/styles/header/header.css" />
 		<link rel="stylesheet" href="/admin-post-page/styles/aside/aside.css" />
+		<link rel="stylesheet" href="/admin-post-page/styles/header/header.css" />
+		<link rel="stylesheet" href="/admin-post-page/styles/main/main.css" />
 
 		<!--font-awesome-->
 		<link
@@ -88,5 +89,28 @@
 				</div>
 			</div>
 		</header>
+
+		<!--main-->
+		<main>
+
+			<!--overview-->
+			<div class="section-container">
+
+				<!--title-->
+				<div>
+					<h1>
+						<i class="fa-solid fa-tag"></i>
+						Overview
+					</h1>
+				</div>
+
+				<!--content-->
+				<div class="section-container__statistics-container">
+					
+				</div>
+
+			</div>
+
+		</main>
 	</body>
 </html>
