--- a/endPoints/rootEndPoint/views/root-get-page/index.ejs
+++ b/endPoints/rootEndPoint/views/root-get-page/index.ejs
@@ -87,7 +87,7 @@
 									<div>
 										<div>
 											<button remove-from-saved-button>
-												<i class="fa-solid fa-bookmark"></i>
+												<i class="fa-solid fa-xmark"></i>
 												Remove Product
 											</button>
 										</div>
